ops/k8s/networkpolicy/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: efp-production
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
